# soft-computing-mid-term

./: README.md
ai_train/: README.md  main.ipynb  main.py  pyproject.toml  stage2_ga_fis.ipynb  stage3_anfis.ipynb  stage4_comparison.ipynb
ai_train/results/: anfis_model.pth  ga_results.json  scalers.pkl
web_app/: README.md  app.py  pyproject.toml
