[project]
name = "web-app"
version = "0.1.0"
description = "AQI Prediction Web Application using FIS, GA-Tuned FIS, and ANFIS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "plotly>=5.18.0",
    "matplotlib>=3.7.0",
]
